Fix missing colours in current.css

--- a/less/current/base/type.less
+++ b/less/current/base/type.less
@@ -19,7 +19,7 @@ h4, .h4 { font-size: @font-size-h4; }
 // -------------------------
 
 p {
-  color: @gray-dark;
+  color: @color-dark-gray;
   line-height: 22px;
   margin-bottom: 5px
 }
@@ -34,7 +34,7 @@ ol, ul.content-text {
 }
 ol > li,
 ul.content-text > li {
-  color: @gray-dark;
+  color: @color-dark-gray;
   line-height: 22px;
 }
 
