--- a/less/current/layout/searchfiltersidebar.less
+++ b/less/current/layout/searchfiltersidebar.less
@@ -1,3 +1,3 @@
 .search-filter-sidebar input {
-  color: @color-true-whiteFFF;
+  color: @color-true-white;
 }
