--- a/less/current/modules/forms.less
+++ b/less/current/modules/forms.less
@@ -48,7 +48,7 @@ label {
 .carousel-doi {
   left: 30px;
   border-radius: 23px;
-  color: @color-true-whitefff;
+  color: @color-true-white;
   margin-top: -26px;
   position: absolute;
   top: 65%;
