--- a/less/current/pages/login.less
+++ b/less/current/pages/login.less
@@ -1,7 +1,7 @@
 /* login */
 .login-div,
 .ouath-div {
-  background-color: @brand-lighter-gray;
+  background-color: @color-lighter-gray;
   padding: 30px;
   width: 555px;
   height: 286px;
