--- a/less/current/pages/usercreate.less
+++ b/less/current/pages/usercreate.less
@@ -1,6 +1,6 @@
 /* usercreate */
 .create-div {
-  background-color: @brand-lighter-gray;
+  background-color: @color-lighter-gray;
   padding: 50px;
   width: 650px;
   margin: 10px auto;
